Fix style of Guide on mobile

--- a/src/components/Guide.scss
+++ b/src/components/Guide.scss
@@ -5,7 +5,7 @@
   left: 0px;
   width: 0;
   background: rgba(0, 0, 0, 0.705);
-  z-index: 10;
+  z-index: 20;
 }
 #guideWrapper {
   overflow-x: hidden;
@@ -20,9 +20,10 @@
 @media (max-width: 499px) {
   #guideWrapper {
     position: fixed;
-    top: 48px;
+    top: 0;
     bottom: 0;
-    z-index: 10;
+    margin-top: 0px;
+    z-index: 20;
     left: -310px;
     overflow-y: auto;
   }
